@@ -119,6 +119,7 @@ fixed formatting. Tomasz Flendrich
 * Clean trailing whitespace in tests/ntpd/Makefile.am.  Harlan Stenn.
 * Update the patch for bug 2817.  Harlan Stenn.
 * More updates for bug 2817.  Harlan Stenn.
+* Fix bugs in tests/ntpd/ntp_prio_q.c.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
